2008-01-23  Paolo Bonzini  <bonzini@gnu.org>

PR tree-optimization/38932
	* fold-const.c (fold_unary_no_overflow): New.
	* tree.h (fold_unary_no_overflow): Declare.
	* tree-ssa-ccp.c (ccp_fold): Use fold_unary_no_overflow.
	* tree-ssa-sccvn.c (visit_reference_op_load,
	simplify_unary_expression): Likewise.

testsuite:
2008-01-23  Paolo Bonzini  <bonzini@gnu.org>

	PR tree-optimization/38932
	* gcc.dg/pr38932.c: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@143588 138bc75d-0d04-0410-961f-82ee72b054a4